# csync

./: README.md  csync.py  pyproject.toml  readme.md
default_mountpoint/: readme.md
src/: csync.py
sync/: readme.md
